kubernetes/applications/nexterm/nexterm-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexterm-ingress
  namespace: nexterm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: nexterm-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nexterm.example.com
      secretName: nexterm-tls
  rules:
    - host: nexterm.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexterm
                port:
                  number: 6989
